Fix clock minute hand clipping - make hands proportional to size
- Remove fixed 180px size from .clock-svg CSS
- Make hour and minute hand lengths proportional to clock size
- Hour hand: 28% of size, Minute hand: 42% of size
- Allows clocks to scale properly at any size

--- a/css/clock.css
+++ b/css/clock.css
@@ -184,8 +184,7 @@
 
 /* SVG-based Clock (better for drag rotation) */
 .clock-svg {
-  width: 180px;
-  height: 180px;
+  /* Size is set dynamically by JS */
 }
 
 .clock-svg .clock-face-bg {
